--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
 	 <a href ="#" class=" navbar-brand"><h3>Hi! This is Nafija</h3></a>
 	 <div class ="collapse navbar-collapse"id ="Navbar">
 	 <ul class ="navbar-nav ml-auto" >
-	 <li class ="nav-item"><a href ="experiment.html" class ="nav-link">About Me</a> </li> 
+	 <li class ="nav-item"><a href ="index.html" class ="nav-link">About Me</a> </li> 
 	 <li class ="nav-item"><a href ="education.html" class ="nav-link">Education</a> </li> 
 	 <li class ="nav-item"><a href ="photos.html" class ="nav-link">Photos</a></li>  
 	 </ul>
