--- a/photos.html
+++ b/photos.html
@@ -62,19 +62,19 @@
         </ol>
         <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/nila.jpg" alt="Hangout" width="1100" height="500">
+          <img src="img/nila.JPG" alt="Hangout" width="1100" height="500">
           <div class="carousel-caption">
             <h4 style="color:green;">Hangout</h4>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/apu.jpg" alt="wedding" width="1100" height="500">
+          <img src="img/apu.JPG" alt="wedding" width="1100" height="500">
           <div class="carousel-caption">
             <h4 style="color: blue;">Wedding</h4>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/211.jpg" alt="21st" width="1100" height="500">
+          <img src="img/211.JPG" alt="21st" width="1100" height="500">
           <div class="carousel-caption">
             <h4>21st</h4>
           </div>
